syntax = "proto3";

package applications;

import "common.proto";

service RpcApplications {
  rpc List (common.RpcEmpty) returns (RpcListReply) {}
}

message RpcListReply {
  string message = 1;
}
